# station-sdk-psa-sensor-test

./: .gitignore  .mcp.json  .mxproject  CLAUDE.md  Makefile  PSA-sensor-test.ioc  STM32H723XG_FLASH.ld  platformio.ini  pyproject.toml  read_distance.sh
.claude/: settings.local.json
.docs/protocol/: README.md  commands.md  examples.md  frame-format.md  python-client.md  sensors.md
.docs/requirements/: 01-protocol-specification.md  02-hardware-configuration.md  03-project-structure.md  04-development-workflow.md  05-code-architecture.md
.serena/: project.yml
Core/Inc/: main.h  stm32h7xx_hal_conf.h
Core/Src/: main.c  stm32h7xx_hal_msp.c
host_tools/: README.md
include/: config.h
include/protocol/: protocol.h
include/sensors/: mlx90640.h  sensor_manager.h  sensor_types.h  vl53l0x.h
lib/MLX90640_API/: MLX90640_API.c  MLX90640_I2C_Driver.c
lib/SEGGER_RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h
lib/VL53L0X_API/core/inc/: vl53l0x_api.h
lib/VL53L0X_Simple/: vl53l0x_simple.c  vl53l0x_simple.h
sequences/: __init__.py
sequences/psa_sensor_test/: __init__.py  main.py  manifest.yaml  pyproject.toml  sequence.py
sequences/psa_sensor_test/drivers/: __init__.py  base.py  psa_mcu.py
sequences/psa_sensor_test/libs/: __init__.py
sequences/psa_sensor_test/libs/psa_protocol/: __init__.py  client.py  constants.py  crc.py  exceptions.py  frame.py  sensors.py  transport.py
src/: main.cpp  main.cpp_pure_sensor
src/hal/: i2c_handler.c
src/protocol/: commands.c
src/sensors/: mlx90640.c  sensor_manager.c  vl53l0x.c
(+2 files in other folders)
